SVN
-------------------------------

XML:   Resolved issue CASTOR-1852 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added an 'automatic class name conflict resolution' mode to the XML code generator.
       Details: http://jira.codehaus.org/browse/CASTOR-1852
       (Werner - 20070211)

XML:   Resolved issue CASTOR-1811 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for validation of correct order of elements of <xsd:sequence> during 
       unmarshalling
       Details: http://jira.codehaus.org/browse/CASTOR-1811
       (Werner - 20070211)

Version 1.1, Feb 10, 2007
-------------------------------

XML:   Resolved issue CASTOR-1198 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       ID resolution now takes validation configuration into account.
       Details: http://jira.codehaus.org/browse/CASTOR-1198
       (Werner - 20070201)

XML:   Resolved issue CASTOR-1861 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added new functionality to XMLClassDescriptorResolver to pre-load class descriptors for a package.
       Details: http://jira.codehaus.org/browse/CASTOR-1861
       (Werner - 20070131)


Version 1.1-M3, Jan 29, 2007
-------------------------------

CTF:   Resolved issue CASTOR-1860 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Move CTF-XML classes to a new package
       Details: http://jira.codehaus.org/browse/CASTOR-1860
       (Edward - 20070128)

Gen:   Resolved issue CASTOR-1859 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Clean up JavaDoc build errors
       Details: http://jira.codehaus.org/browse/CASTOR-1859
       (Edward - 20070128)

CTF:   Resolved issue CASTOR-1858 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Move XML CTF from src/tests to xmlctf
       Details: http://jira.codehaus.org/browse/CASTOR-1858
       (Edward - 20070128)
