@@ -1,28 +1,0 @@
-
-
-import org.exolab.castor.xml.*;
-import org.exolab.castor.mapping.*;
-
-public class Required_Root {
-    private String _name;
-    private String _item;
-    public Required_Root() {
-    }
-
-    public String getName() {
-        return _name;
-    }
-
-    public String getItem() {
-        return _item;
-    }
-
-    public void setName(String name) {
-        _name = name;
-    }
-
-    public void setItem(String item) {
-        _item = item;
-    }
-
-}
