@@ -1,2 +1,0 @@
-<Test name="castor">
-</Test>
