@@ -1,0 +1,14 @@
+import java.util.ArrayList;
+import java.util.List;
+
+public class Kennel {
+
+   private List dogs = new ArrayList();
+
+   public List getDogs() {
+      return dogs;
+   }
+   public void setDogs(List dogs) {
+      this.dogs = dogs;
+   }
+}
