@@ -1,3 +1,0 @@
-<Test name="castor">
-    <Item>beaver</Item>
-</Test>
